--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ node_js:
 services:
   - postgresql
 
+env:
+  - DB=postgres
+  - DB_URL=postgres://foo:bar@localhost:5432/testing_db
+
 before_script:
   - psql -c "CREATE DATABASE testing_db;" -U postgres
   - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
