--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
   - "node"
 
+install:
+  - npm install -g codecov
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
+
 services:
   - postgresql
 
@@ -13,3 +19,7 @@ before_script:
   - psql -c 'CREATE DATABASE travis_ci_test;' -U postgres
   - psql -c "CREATE USER test WITH PASSWORD '1234';" -U postgres
   - psql -c "ALTER DATABASE travis_ci_test OWNER TO test;" -U postgres
+
+
+
+
