--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "teamPortfolioBackend",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "repository": "https://github.com/zurda/teamPortfolio",
   "description": "First portfolio project",
   "main": "index.js",
   "scripts": {
-    "test": "node src/test/test_server.js | tap-spec && NODE_ENV=test node src/test/test_db.js | tap-spec",
+    "test": "node src/test/test_server.js | tap-spec && NODE_ENV=test node src/test/test_db.js | tap-spec && node_modules/.bin/istanbul cover tape src/test/test*.js",
+    "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -15,9 +17,8 @@
   },
   "homepage": "https://github.com/fac-15/FAC_guidebook#readme",
   "devDependencies": {
-    "env2": "^2.2.2",
+    "istanbul": "^0.4.5",
     "nodemon": "^1.18.7",
-    "pg": "^7.7.1",
     "supertest": "^3.3.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
@@ -25,7 +26,6 @@
   "dependencies": {
     "env2": "^2.2.2",
     "pg": "^7.7.1",
-    "request": "^2.88.0",
-    "tape": "^4.9.1"
+    "request": "^2.88.0"
   }
 }
