--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "First portfolio project",
   "main": "index.js",
   "scripts": {
-    "test": "node src/test/test_server.js | tap-spec && NODE_ENV=test node src/test/test_db.js | tap-spec && istanbul cover tape src/test/test*.js",
+    "test": "node src/test/test_server.js | tap-spec && NODE_ENV=test node src/test/test_db.js | tap-spec && node_modules/.bin/istanbul cover tape src/test/test*.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
