--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "First portfolio project",
   "main": "index.js",
   "scripts": {
-    "test": "node src/test/test_server.js | tap-spec && NODE_ENV=test node src/test/test_db.js | tap-spec && node_modules/.bin/istanbul cover node_modules/.bin/tape ./test/test*.js",
+    "test": "node ./src/test/test_server.js | tap-spec && NODE_ENV=test node ./src/test/test_db.js | tap-spec && ./node_modules/.bin/istanbul cover ./node_modules/.bin/tape ./src/test/test*.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/fac-15/FAC_guidebook#readme",
   "devDependencies": {
-    "codecov": "^3.1.0",
     "istanbul": "^0.4.5",
     "nodemon": "^1.18.7",
     "supertest": "^3.3.0",
