--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ node_js:
 
 install:
   - npm install -g codecov
+
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
-  - codecov
+  - npm test
 
 services:
   - postgresql
